beery background, bottom gap fixed

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,13 @@
 $font-family-sans-serif: 'Oswald', sans-serif;
 $font-family-base: $font-family-sans-serif;
 
-$navbar-height: 60px;
-// $navbar-default-bg: #FDFFA0;
+$navbar-height: 120px;
+
 $navbar-default-bg: #FFF60D;
+$navbar-default-border: #E6E6E6;
+$navbar-border-radius: 0;
+
 $body-bg: #FFFEE7;
-// $btn-primary-bg: #6B0DFF;
+
 $btn-primary-bg: $navbar-default-bg;
 $btn-primary-color: black;
