--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,6 +7,11 @@
   GLOBALS
 ********************************************************/
 
+body {
+  background: url(../images/beer_bg.jpg) white no-repeat center center fixed;
+  background-size: cover;
+}
+
 .btn {
   font-family: 'Special Elite', cursive;
   font-weight: bold;
@@ -20,12 +25,16 @@
 
 
 
+
 /********************************************************
   NAVBAR
 ********************************************************/
 
-nav {
+.navbar {
+  background: url(../images/beer_head.jpg) white;
+
   .container {
+    padding-top: 1.6em;
     margin-left: auto;
     margin-right: auto;
   }
@@ -36,13 +45,13 @@ nav {
   padding: 0;
   padding-left: 3%;
   img {
-    max-width: 40px;
+    max-width: 60px;
     margin-right: 10px;
     position: relative;
     bottom: 0.18em;
   }
   h4 {
-    font-size: 1.85em;
+    font-size: 2.5em;
     font-weight: bold;
     color: black;
     padding-top: 0.12em;
@@ -59,6 +68,10 @@ nav {
 
 main {
   text-align: center;
+  h2:first-child {
+    color: $gray-darker;
+    margin-top: 1.2em;
+  }
 }
 
 
@@ -77,7 +90,7 @@ main {
   }
 
   p {
-    color: $gray-light;
+    color: $gray-dark;
   }
 }
 
@@ -90,7 +103,8 @@ main {
 ********************************************************/
 
 .manual-search {
-  h4 {
+  h3 {
+    color: $gray-darker;
     text-align: left;
     margin-left: 0.5%;
   }
@@ -128,7 +142,6 @@ main {
   RESULTS DIV
 ********************************************************/
 
-body {background: url(../images/beer_bg.jpg) white;}
 .results {
 
   li {
